# day-1_sales_data_generator

./: .env.example  .gitignore  LICENSE  README.md  commit_message.txt  d1_sales_simulator.py  main.py  pyproject.toml  run_simulator.fish  run_simulator.sh  setup_database.sh  simulate_modifications.sql  simulate_new_sale.sql  verify_simulation.py
sql/: simulation_functions.sql  update_historical_data.sql
src/: d1_sales_simulator.py  main.py  verify_simulation.py
